--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,13 @@ spec/spec
 examples/simple-consumer/simple-consumer
 examples/simple-producer/simple-producer
 
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+.idea
+.vscode
 
-.idea/**/contentModel.xml
+#.idea/**/workspace.xml
+#.idea/**/tasks.xml
+#.idea/**/usage.statistics.xml
+#.idea/**/dictionaries
+#.idea/**/shelf
+#
+#.idea/**/contentModel.xml
